change accordion header background

--- a/huu-ich/ke-hoach-tai-chinh/khtcp1.html
+++ b/huu-ich/ke-hoach-tai-chinh/khtcp1.html
@@ -134,6 +134,9 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 
 }
 
+.accordion-header {
+  background-color:black;
+}
 </style>
 <script async custom-element="amp-accordion" src="https://cdn.ampproject.org/v0/amp-accordion-0.1.js"></script>
 </head>
@@ -233,7 +236,7 @@ data-ad-slot="5275186684">
   <p>Trang này hướng dẫn cách dùng bảng tính <b><a href="https://docs.google.com/spreadsheets/d/1R-RledWJqlMJEzR294JBZnekYwjbNliwg1EQN1Wraqg/edit?usp=sharing" target="_blank">KHTCp1</a></b> để lập <i>kế hoạch thu-chi và đầu tư trong suốt cuộc đời</i>. Khi bạn đã nghỉ làm và hưởng thụ cuộc sống thì bạn cần dùng <a href="khtcp2">KHTCp2</a> để kiểm soát ngân quỹ.</p>
   <amp-accordion>
   <section>
-  <h3>Phương pháp tính (bấm vào đây để xem chi tiết)</h3>
+  <h3 class="accordion-header">Phương pháp tính (bấm vào đây để xem chi tiết)</h3>
   <div>
   <p>Phương pháp tính ở đây dựa trên các nguyên tắc rất đơn giản:</p>
   <ul>
@@ -279,7 +282,7 @@ data-ad-slot="3830899615">
 
   <amp-accordion>
   <section>
-  <h3>Bảng tính KHTCp1 gồm có các trang (bấm vào đây để xem chi tiết)</h3>
+  <h3 class="accordion-header">Bảng tính KHTCp1 gồm có các trang (bấm vào đây để xem chi tiết)</h3>
   <ul>
     <li>Hướng-dẫn: những ghi chú quan trọng</li>
     <li>TT-chung: những thông số để dùng chung trong các trang còn lại</li>
@@ -296,7 +299,7 @@ data-ad-slot="3830899615">
   <h2>Hãy lập kế hoạch theo các bước sau</h2>
   <amp-accordion>
   <section>
-  <h3>Chép bảng tính KHTCp1, đọc trang Hướng-dẫn (bấm vào đây để xem chi tiết)</h3>
+  <h3 class="accordion-header">Chép bảng tính KHTCp1, đọc trang Hướng-dẫn (bấm vào đây để xem chi tiết)</h3>
   <div>
   <p>Bấm vào <a href="https://docs.google.com/spreadsheets/d/1R-RledWJqlMJEzR294JBZnekYwjbNliwg1EQN1Wraqg/edit?usp=sharing" target="_blank">đây</a> rồi chọn menu <b>Tệp→Tạo một bản sao</b> hoặc <b>File→Make a copy</b> để chép về Google Drive của bạn, <i>chú ý</i>: dùng menu dưới chữ <b>KHTCp1</b> trong cửa sổ chương trình duyệt web, đừng dùng menu của chương trình duyệt web, đừng download về dùng với Excel vì trong KHTCp1 có một số hàm tôi tự viết, Excel không thể chạy những hàm đó. Nếu bạn mở KHTCp1 bằng Google Sheet app trên smartphone thì bạn dùng menu <b>⋮→Share &amp; export</b> để <b>Make a copy</b>.
 Bạn hãy đổi tên file thành KHTCyyyymm, theo tháng bắt đầu kế hoạch.</p>
@@ -353,7 +356,7 @@ data-ad-slot="3830899615">
   <br><span class="tmark">Chương trình sẽ tính ra trong ô B16 số tiền bạn cần có lúc bắt đầu về hưu.</span></p>
   <amp-accordion>
   <section>
-  <h4>Dự tính mức lương hưu nhận từ Bảo hiểm Xã hội (bấm vào đây để xem chi tiết)</h4>
+  <h4 class="accordion-header">Dự tính mức lương hưu nhận từ Bảo hiểm Xã hội (bấm vào đây để xem chi tiết)</h4>
   <p>Hai ô B19 và B20 để ghi số tháng <b>đã</b> đóng BHXH và tổng số lương đã đóng BHXH. Bạn phải mở sổ BHXH của bạn để cộng ra hai con số này. Bạn có thể tìm thông tin ở <a href="http://baohiemxahoi.gov.vn/" target="_blank">trang web của BHXH</a>.
   <br>Ô B22 ghi mức lương đóng BHXH của bạn hiện nay, hãy xem trong sổ BHXH để biết con số này, nó có thể thấp hơn nhiều so với lương bạn đang nhận hàng tháng.
   <br>Ô B24 để ghi dự báo mức tăng lương BHXH, gồm tăng do trượt giá cộng với tăng do sự thăng tiến của bạn. Để thận trọng thì bạn có thể ghi số nhỏ trong ô này. Đặc biệt là trong trường hợp bạn đang đóng BHXH với mức lương cao thì bạn sẽ nhanh chóng chạm đến mức lương tối đa của BHXH (là 20 lần lương tối thiểu theo quy định của luật hiện hành), trong trường hợp này bạn nên cho mức tăng lương do thăng tiến khoảng 1%/năm thôi.
@@ -406,7 +409,7 @@ Dòng nào để trống hoặc ghi 0₫ ở cột C (Số tiền cần có) ngh
 
   <amp-accordion>
   <section>
-  <h4>Tham khảo chi phí học đại học (bấm vào đây để xem chi tiết)</h4>
+  <h4 class="accordion-header">Tham khảo chi phí học đại học (bấm vào đây để xem chi tiết)</h4>
   <div>
   <table class="withborder">
   <tbody>
@@ -569,7 +572,7 @@ data-ad-slot="3830899615">
 
   <amp-accordion>
   <section>
-  <h3>Về hưu sớm (bấm vào đây để xem chi tiết)</h3>
+  <h3 class="accordion-header">Về hưu sớm (bấm vào đây để xem chi tiết)</h3>
   <div>
   <p>Khi về hưu sớm bạn chưa nhận được lương hưu BHXH ngay mà còn phải tiếp tục đóng BHXH đến khi đúng tuổi nhận lương hưu. Như vậy lộ trình tài chính sẽ có 3 giai đoạn:</p>
   <ol>
