remove old domain name

--- a/huu-ich/cau-chuyen/nghi-huu-som.html
+++ b/huu-ich/cau-chuyen/nghi-huu-som.html
@@ -136,7 +136,6 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 </style>
 </head>
 
-
 <body>
   <!-- top of body -->
   <!-- sidebar menu -->
@@ -447,7 +446,7 @@ Bạn cũng nên đặt mục đích rõ ràng khi nào về hưu và quyết đ
     <br>Các bạn đừng nghĩ rằng điều này không đúng ở thị trường Việt Nam. Thứ vẫn đúng ở Việt Nam là giá cổ phiếu các công ty tốt như Vinamilk, Vietcombank… có thể giảm nhưng giá trị của công ty vẫn tăng, giá cổ phiếu sẽ tăng lên lại.
     <br>Khi đầu tư vào quỹ đầu tư là chúng ta đầu tư cùng lúc 20-30 công ty. Các bạn đừng lo các công ty đó có thể phá sản. Xác suất để từng công ty đó phá sản trong 10 năm tới là bao nhiêu phần triệu? Xác suất để các công ty đó đồng loạt phá sản là bao nhiêu phần tỉ?</li>
     <li>Hai vợ chồng tính số tiền cần có để về hưu là 25 lần chi tiêu hàng năm. Tính như vậy khá thô sơ, chưa tính đến lạm phát, nhất là khi thời gian về hưu dài đến 40-50 năm. Để tính đến yếu tố lạm phát thì nên dùng công cụ tính toán <a href="/huu-ich/ke-hoach-tai-chinh/">KHTC</a></li>
-    <li>Tên trang web GoCurryCracker.com không thể hiện nội dung của nó, cũng như tên trang web <a href="http://www.lhboi.name.vn">www.lhboi.name.vn</a> không thể hiện nội dung hữu ích cho việc làm giàu và tự do tài chính. Cuộc sống khi đã đạt đến mức <a href="/huu-ich/chi-tieu">tự do tài chính</a> như hai vợ chồng Jeremy và Winnie rất tuyệt vời.</li>
+    <li>Tên trang web GoCurryCracker.com không thể hiện nội dung của nó, cũng như tên trang web <a href="http://lehboi.github.io">lehboi.github.io</a> không thể hiện nội dung hữu ích cho việc làm giàu và tự do tài chính. Cuộc sống khi đã đạt đến mức <a href="/huu-ich/chi-tieu">tự do tài chính</a> như hai vợ chồng Jeremy và Winnie rất tuyệt vời.</li>
   </ol>
 
   <div class="todisccuss">
@@ -471,10 +470,10 @@ srcdoc="<img width='100' height='24' src='https://c.statcounter.com/12598906/0/9
   <a href="viber://add?number=84989760570"><amp-img src="/images/icons/Viber-128.png" layout="fixed" width="40" height="40" alt="Viber"></amp-img></a>
   <a href="http://zaloapp.com/qr/p/lzfbyqlwzn9u"><amp-img src="/images/icons/Zalo.webp" layout="fixed" width="40" height="40" alt="Zalo"></amp-img></a> 
   <a href="tel:+84989760570"><amp-img src="/images/icons/Cell-Phone-256.png" layout="fixed" width="40" height="40" alt="điện thoại"></amp-img></a>
-  <a href="mailto:LEHBOI@GMAIL.COM?subject=www.lhboi.name.vn"><amp-img src="/images/icons/address_blue-128.png" layout="fixed" width="40" height="40" alt="email"></amp-img></a> 
+  <a href="mailto:LEHBOI@GMAIL.COM?subject=lehboi.github.io"><amp-img src="/images/icons/address_blue-128.png" layout="fixed" width="40" height="40" alt="email"></amp-img></a> 
   <a href="https://www.google.com/maps/place/L%C3%AA+H%E1%BB%93ng+B%E1%BB%99i/@10.720385,106.7007479,15z/data=!4m5!3m4!1s0x0:0x5e907d2164963e6f!8m2!3d10.720385!4d106.7007479" target='_blank'><amp-img src="/images/icons/Home_256x256.png" layout="fixed" width="40" height="40" alt="nhà"></amp-img></a>
   <br>
-  Nếu bạn chép lại những trang-web này, hãy ghi nguồn-gốc <a href="https://lehboi.github.io">http://LeHBoi.github.io</a> để người-đọc có-thể tìm được nội-dung mới nhất.
+  Nếu bạn chép lại những trang-web này, hãy ghi nguồn-gốc <a href="https://lehboi.github.io">http://LeHBoi.github.io</a> để người-đọc có-thể tìm được nội-dung mới nhất. (Domain name trước đây của website này là LHBOI.NAME.VN.)
   </div>
 </div>
 <amp-analytics type="googleanalytics">
