--- a/huu-ich/dau-tu-co-phieu/so-tk-hay-dau-tu.html
+++ b/huu-ich/dau-tu-co-phieu/so-tk-hay-dau-tu.html
@@ -2,7 +2,7 @@
 <html amp lang="vi">
 <head>
 <title>Sổ tiết kiệm hay Quỹ đầu tư?</title>
-<meta name="description" content="So sánh tiền lời giữa sổ tiết kiệm và quỹ đầu tư trong 12 năm qua" />
+<meta name="description" content="So sánh tiền lời giữa vàng, USD, sổ tiết kiệm và quỹ đầu tư trong 12 năm qua" />
 <meta name="keywords" content="hữu ích, tài chính, cá nhân, tiết kiệm, đầu tư, lợi nhuận">
 <link rel="alternate" href="https://www.lhboi.name.vn/huu-ich/dau-tu-co-phieu/so-tk-hay-dau-tu">
 <link rel="canonical" href="https://lehboi.github.io/huu-ich/dau-tu-co-phieu/so-tk-hay-dau-tu">
@@ -143,10 +143,10 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   "keywords": [ "quỹ mở", "đầu tư", "định kỳ" ],
   "creator": {
     "@type": "Person",
-    "url": "https://www.lhboi.name.vn"
+    "url": "https://lehboi.github.io"
   },
   "variableMeasured": "lợi nhuận",
-  "url": "https://www.lhboi.name.vn/huu-ich/dau-tu-co-phieu/so-tk-hay-dau-tu"
+  "url": "https://lehboi.github.io/huu-ich/dau-tu-co-phieu/so-tk-hay-dau-tu"
 }
 </script>
 </head>
@@ -448,10 +448,10 @@ srcdoc="<img width='100' height='24' src='https://c.statcounter.com/12598906/0/9
   <a href="viber://add?number=84989760570"><amp-img src="/images/icons/Viber-128.png" layout="fixed" width="40" height="40" alt="Viber"></amp-img></a>
   <a href="http://zaloapp.com/qr/p/lzfbyqlwzn9u"><amp-img src="/images/icons/Zalo.webp" layout="fixed" width="40" height="40" alt="Zalo"></amp-img></a> 
   <a href="tel:+84989760570"><amp-img src="/images/icons/Cell-Phone-256.png" layout="fixed" width="40" height="40" alt="điện thoại"></amp-img></a>
-  <a href="mailto:LEHBOI@GMAIL.COM?subject=www.lhboi.name.vn"><amp-img src="/images/icons/address_blue-128.png" layout="fixed" width="40" height="40" alt="email"></amp-img></a> 
+  <a href="mailto:LEHBOI@GMAIL.COM?subject=lehboi.github.io"><amp-img src="/images/icons/address_blue-128.png" layout="fixed" width="40" height="40" alt="email"></amp-img></a> 
   <a href="https://www.google.com/maps/place/L%C3%AA+H%E1%BB%93ng+B%E1%BB%99i/@10.720385,106.7007479,15z/data=!4m5!3m4!1s0x0:0x5e907d2164963e6f!8m2!3d10.720385!4d106.7007479" target='_blank'><amp-img src="/images/icons/Home_256x256.png" layout="fixed" width="40" height="40" alt="nhà"></amp-img></a>
   <br>
-  Nếu bạn chép lại những trang-web này, hãy ghi nguồn-gốc <a href="https://lehboi.github.io">http://LeHBoi.github.io</a> để người-đọc có-thể tìm được nội-dung mới nhất.
+  Nếu bạn chép lại những trang-web này, hãy ghi nguồn-gốc <a href="https://lehboi.github.io">http://LeHBoi.github.io</a> để người-đọc có-thể tìm được nội-dung mới nhất. (Domain name trước đây của website này là LHBOI.NAME.VN.)
   </div>
 </div>
 <amp-analytics type="googleanalytics">
