--- a/huu-ich/ke-hoach-tai-chinh/khtcp1.html
+++ b/huu-ich/ke-hoach-tai-chinh/khtcp1.html
@@ -141,7 +141,6 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 <script async custom-element="amp-accordion" src="https://cdn.ampproject.org/v0/amp-accordion-0.1.js"></script>
 </head>
 
-
 <body>
   <!-- top of body -->
   <!-- sidebar menu -->
@@ -227,7 +226,7 @@ data-ad-slot="5275186684">
   </div>
 
   <h1>Lập kế hoạch tài chính gia đình</h1>
-  <div class="right">(<a href="https://en.lhboi.name.vn/fa/pfr/pfr1">English</a>)</div>
+  <div class="right">(<a href="https://lehboi.github.io/en/fa/pfr/pfr1">English</a>)</div>
   <div class="right">Viết lần đầu trong Tháng Hai, 2019.</div>
   <h2>Giai đoạn tích luỹ đầu tư</h2>
   <p>Bạn đang làm ra tiền để chi tiêu trước mắt và tích luỹ cho các mục tiêu trong tương lai như mua nhà, mua xe, quỹ hưu trí…
@@ -525,7 +524,7 @@ data-ad-slot="3830899615">
   <h3>Plan-Do-Check-Act</h3>
   <p>Các tính toán trong bảng tính này dựa trên các yếu tố sẽ thay đổi theo thời gian như là lãi suất, lạm phát, thu nhập và chi tiêu của gia đình bạn. Do đó bạn cần điều chỉnh kế hoạch của mình mỗi khi có thay đổi.
   <br>Hãy nhớ chép bảng tính ra một bản để lưu trước khi thay đổi, ví dụ: ngày 1.1.2020, chép file KHTC201906 thành file KHTC202001 và sửa file KHTC202001. Việc cập nhật kế hoạch nên làm ít nhất một lần mỗi năm, bắt đầu từ trang TT-chung rồi đến các trang Trả-góp, Mục-tiêu, Bảo-hiểm.</p>
-  <p>Bạn cần phải đánh giá lại lợi nhuận trung bình của tổng tài sản trong thời gian qua để điều chỉnh vào bản kế hoạch mới. Để tính lợi nhuận trung bình thì bạn cần dùng bảng tính trong trang <a href="https://www.lhboi.name.vn/huu-ich/hieu-qua-dau-tu">Tính hiệu quả của việc đầu tư</a>.</p>
+  <p>Bạn cần phải đánh giá lại lợi nhuận trung bình của tổng tài sản trong thời gian qua để điều chỉnh vào bản kế hoạch mới. Để tính lợi nhuận trung bình thì bạn cần dùng bảng tính trong trang <a href="../hieu-qua-dau-tu">Tính hiệu quả của việc đầu tư</a>.</p>
   <p>Nếu không có thêm mục tiêu lớn thì tỷ lệ chi tiêu trên thu nhập không thay đổi nhiều sau mỗi lần cập nhật kế hoạch. Do đó bạn nên liệt kê đủ các mục tiêu từ lần lập kế hoạch đầu tiên.
   <br>Bạn nên cố gắng đầu tư thêm hàng tháng cao hơn mức đã tính ra trong lộ trình để dự trữ cho những giai đoạn xấu trong tương lai. Nếu trong tương lai bạn không gặp phải những giai đoạn xấu thì phần dự trữ sẽ giúp bạn có cơ hội về hưu sớm hoặc tăng mức sống lên cao hơn.</p>
 
@@ -673,10 +672,10 @@ srcdoc="<img width='100' height='24' src='https://c.statcounter.com/12598906/0/9
   <a href="viber://add?number=84989760570"><amp-img src="/images/icons/Viber-128.png" layout="fixed" width="40" height="40" alt="Viber"></amp-img></a>
   <a href="http://zaloapp.com/qr/p/lzfbyqlwzn9u"><amp-img src="/images/icons/Zalo.webp" layout="fixed" width="40" height="40" alt="Zalo"></amp-img></a> 
   <a href="tel:+84989760570"><amp-img src="/images/icons/Cell-Phone-256.png" layout="fixed" width="40" height="40" alt="điện thoại"></amp-img></a>
-  <a href="mailto:LEHBOI@GMAIL.COM?subject=www.lhboi.name.vn"><amp-img src="/images/icons/address_blue-128.png" layout="fixed" width="40" height="40" alt="email"></amp-img></a> 
+  <a href="mailto:LEHBOI@GMAIL.COM?subject=lehboi.github.io"><amp-img src="/images/icons/address_blue-128.png" layout="fixed" width="40" height="40" alt="email"></amp-img></a> 
   <a href="https://www.google.com/maps/place/L%C3%AA+H%E1%BB%93ng+B%E1%BB%99i/@10.720385,106.7007479,15z/data=!4m5!3m4!1s0x0:0x5e907d2164963e6f!8m2!3d10.720385!4d106.7007479" target='_blank'><amp-img src="/images/icons/Home_256x256.png" layout="fixed" width="40" height="40" alt="nhà"></amp-img></a>
   <br>
-  Nếu bạn chép lại những trang-web này, hãy ghi nguồn-gốc <a href="https://lehboi.github.io">http://LeHBoi.github.io</a> để người-đọc có-thể tìm được nội-dung mới nhất.
+  Nếu bạn chép lại những trang-web này, hãy ghi nguồn-gốc <a href="https://lehboi.github.io">http://LeHBoi.github.io</a> để người-đọc có-thể tìm được nội-dung mới nhất. (Domain name trước đây của website này là LHBOI.NAME.VN.)
   </div>
 </div>
 <amp-analytics type="googleanalytics">
