--- a/kinh-nghiem/linh-tinh/magchan.html
+++ b/kinh-nghiem/linh-tinh/magchan.html
@@ -224,7 +224,7 @@ data-ad-slot="5275186684">
 <!-- body here -->
   <h1>Dùng thử Magchan để giặt</h1>
   <div class="right">Viết lần đầu trong Tháng Năm, 2020.</div>
-  <p><a href="https://magchan.com/" target='_blank'>Magchan</a> Magchan là sản phẩm dùng thay các chất tẩy rửa (detergent) để giặt, do một công ty Nhật sản xuất ra.
+  <p><a href="https://magchan.com/" target='_blank'>Magchan</a> là sản phẩm dùng thay các chất tẩy rửa (detergent) để giặt, do một công ty Nhật sản xuất ra.
   Theo nhà sản xuất thì Magchan gồm rất nhiều hạt magnesium nguyên chất 99,95% đựng trong một túi lưới dầy.
   Cách dùng Magchan là cho một túi lưới chứa 100g hạt Mg đó vào máy giặt cùng với (không quá 5Kg) quần áo bẩn và cho máy giặt làm việc như thường mà không cần cho chất tẩy rửa (bột giặt, nước giặt…) và chất làm thơm (softener).</p>
   <p>Nhà sản xuất giới thiệu rằng:</p>
@@ -237,7 +237,7 @@ data-ad-slot="5275186684">
     <li>Mỗi gói Magchan dùng được khoảng 300 lần.</li>
   </ul>
   <p>Tôi tìm đọc những nhận xét ở các trang web bán Magchan thì thấy số người khen sản phẩm nhiều hơn số người chê nên tui mua thử một gói 100g dùng thử.
-  <br>Kết quả không như mong muốn.</p>
+  <br><b>Kết quả không như mong muốn</b>.</p>
 <!-- AMP In-article 1 -->
 <amp-ad
 media="(max-width: 399px)"
@@ -310,7 +310,7 @@ data-ad-slot="3830899615">
 
   <h3>Giặt với Magchan và nước giặt và nước làm thơm</h3>
   <p>Lần thử thứ ba, tôi cho máy giặt làm việc nhiều hơn: giặt 30', và dùng 30ml nước giặt (một nửa lượng bình thường) và cho nước làm thơm khi xả lần cuối.
-  <br>Quần áo phơi khô không có muì rõ rệt nhưng mùi hôi tăng dần khi cất trong tủ.</p>
+  <br>Quần áo phơi khô không có mùi rõ rệt nhưng mùi hôi tăng dần khi cất trong tủ.</p>
 
   <h3>Giặt bằng tay</h3>
   <p>Tôi thử giặt 4 mảnh quần áo cotton bằng tay theo các bước sau:</p>
@@ -400,10 +400,10 @@ srcdoc="<img width='100' height='24' src='https://c.statcounter.com/12598906/0/9
   <a href="viber://add?number=84989760570"><amp-img src="/images/icons/Viber-128.png" layout="fixed" width="40" height="40" alt="Viber"></amp-img></a>
   <a href="http://zaloapp.com/qr/p/lzfbyqlwzn9u"><amp-img src="/images/icons/Zalo.webp" layout="fixed" width="40" height="40" alt="Zalo"></amp-img></a> 
   <a href="tel:+84989760570"><amp-img src="/images/icons/Cell-Phone-256.png" layout="fixed" width="40" height="40" alt="điện thoại"></amp-img></a>
-  <a href="mailto:LEHBOI@GMAIL.COM?subject=www.lhboi.name.vn"><amp-img src="/images/icons/address_blue-128.png" layout="fixed" width="40" height="40" alt="email"></amp-img></a> 
+  <a href="mailto:LEHBOI@GMAIL.COM?subject=lehboi.github.io"><amp-img src="/images/icons/address_blue-128.png" layout="fixed" width="40" height="40" alt="email"></amp-img></a> 
   <a href="https://www.google.com/maps/place/L%C3%AA+H%E1%BB%93ng+B%E1%BB%99i/@10.720385,106.7007479,15z/data=!4m5!3m4!1s0x0:0x5e907d2164963e6f!8m2!3d10.720385!4d106.7007479" target='_blank'><amp-img src="/images/icons/Home_256x256.png" layout="fixed" width="40" height="40" alt="nhà"></amp-img></a>
   <br>
-  Nếu bạn chép lại những trang-web này, hãy ghi nguồn-gốc <a href="https://lehboi.github.io">http://LeHBoi.github.io</a> để người-đọc có-thể tìm được nội-dung mới nhất.
+  Nếu bạn chép lại những trang-web này, hãy ghi nguồn-gốc <a href="https://lehboi.github.io">http://LeHBoi.github.io</a> để người-đọc có-thể tìm được nội-dung mới nhất. (Domain name trước đây của website này là LHBOI.NAME.VN.)
   </div>
 </div>
 <amp-analytics type="googleanalytics">
