--- a/kinh-nghiem/may-tinh/toys.html
+++ b/kinh-nghiem/may-tinh/toys.html
@@ -136,7 +136,6 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 </style>
 </head>
 
-
 <body>
   <!-- top of body -->
   <!-- sidebar menu -->
@@ -223,7 +222,7 @@ data-ad-slot="5275186684">
 
   <h1>Home server</h1>
 <h2>Máy tính</h2>
-<p>Trong những năm khoảng 2006-2011 tôi host web site này ở nhà dưới tên <a href="https://web.archive.org/web/20150407122250/http://lhboi.homelinux.net/huu-ich.html" target='_blank'>lhboi.homelinux.net</a>. Web server đó cũng là gateway, và máy trả lời điện thoại của chúng tôi. Trước đó, một số nội dung trong website này được đưa vào Internet lần đầu trong những năm 1998-2005 ở <a href="https://web.archive.org/web/20040730232945/http://lhboi.tripod.com/" target='_blank'>lhboi.tripod.com</a>. Bây giờ cả hai domain đó đều không còn, nhưng các bạn có thể tìm lại trong dịch vụ <a href="https://web.archive.org" target='_blank'>lưu trữ web</a>. Từ năm 2011, những bài viết của tôi xuất hiện trong www.lhboi.name.vn bằng dịch vụ <a href="https://sites.google.com/" target='_blank'>Google Sites</a>. Bây giờ domain lhboi.name.vn được đặt ở một nhà cung cấp dịch vụ web hosting ở Việt Nam với chi phí thấp hơn <a href="../linh-tinh/tieu-thu-dien">tiền điện</a> cho máy tinh nhỏ xíu <a href="raspberrypi">Raspberry Pi</a> và router.<br>
+<p>Trong những năm khoảng 2006-2011 tôi host web site này ở nhà dưới tên <a href="https://web.archive.org/web/20150407122250/http://lhboi.homelinux.net/huu-ich.html" target='_blank'>lhboi.homelinux.net</a>. Web server đó cũng là gateway, và máy trả lời điện thoại của chúng tôi. Trước đó, một số nội dung trong website này được đưa vào Internet lần đầu trong những năm 1998-2005 ở <a href="https://web.archive.org/web/20040730232945/http://lhboi.tripod.com/" target='_blank'>lhboi.tripod.com</a>. Bây giờ cả hai domain đó đều không còn, nhưng các bạn có thể tìm lại trong dịch vụ <a href="https://web.archive.org" target='_blank'>lưu trữ web</a>. Từ năm 2011, những bài viết của tôi xuất hiện trong www.lhboi.name.vn bằng dịch vụ <a href="https://sites.google.com/" target='_blank'>Google Sites</a>. Sau đó domain lhboi.name.vn được đặt ở một nhà cung cấp dịch vụ web hosting ở Việt Nam với chi phí thấp hơn <a href="../linh-tinh/tieu-thu-dien">tiền điện</a> cho máy tinh nhỏ xíu <a href="raspberrypi">Raspberry Pi</a> và router. Cuối cùng website cá nhân của tôi được đặt vĩnh viễn trong server GitHub dưới tên lehboi.github.io.<br>
 Phần dưới đây viết trong những năm 2006-2007.</p>
 <p>Tất cả các phần mềm dùng trong server lhboi.homelinux.net đều là phần mềm mã nguồn mở:</p>
 <table class="noborder">
@@ -422,10 +421,10 @@ srcdoc="<img width='100' height='24' src='https://c.statcounter.com/12598906/0/9
   <a href="viber://add?number=84989760570"><amp-img src="/images/icons/Viber-128.png" layout="fixed" width="40" height="40" alt="Viber"></amp-img></a>
   <a href="http://zaloapp.com/qr/p/lzfbyqlwzn9u"><amp-img src="/images/icons/Zalo.webp" layout="fixed" width="40" height="40" alt="Zalo"></amp-img></a> 
   <a href="tel:+84989760570"><amp-img src="/images/icons/Cell-Phone-256.png" layout="fixed" width="40" height="40" alt="điện thoại"></amp-img></a>
-  <a href="mailto:LEHBOI@GMAIL.COM?subject=www.lhboi.name.vn"><amp-img src="/images/icons/address_blue-128.png" layout="fixed" width="40" height="40" alt="email"></amp-img></a> 
+  <a href="mailto:LEHBOI@GMAIL.COM?subject=lehboi.github.io"><amp-img src="/images/icons/address_blue-128.png" layout="fixed" width="40" height="40" alt="email"></amp-img></a> 
   <a href="https://www.google.com/maps/place/L%C3%AA+H%E1%BB%93ng+B%E1%BB%99i/@10.720385,106.7007479,15z/data=!4m5!3m4!1s0x0:0x5e907d2164963e6f!8m2!3d10.720385!4d106.7007479" target='_blank'><amp-img src="/images/icons/Home_256x256.png" layout="fixed" width="40" height="40" alt="nhà"></amp-img></a>
   <br>
-  Nếu bạn chép lại những trang-web này, hãy ghi nguồn-gốc <a href="https://lehboi.github.io">http://LeHBoi.github.io</a> để người-đọc có-thể tìm được nội-dung mới nhất.
+  Nếu bạn chép lại những trang-web này, hãy ghi nguồn-gốc <a href="https://lehboi.github.io">http://LeHBoi.github.io</a> để người-đọc có-thể tìm được nội-dung mới nhất. (Domain name trước đây của website này là LHBOI.NAME.VN.)
   </div>
 </div>
 <amp-analytics type="googleanalytics">
