--- a/huu-ich/ke-hoach-tai-chinh/index.html
+++ b/huu-ich/ke-hoach-tai-chinh/index.html
@@ -135,8 +135,23 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 }
 
 </style>
+<script type="application/ld+json">
+{
+  "@context": "http://schema.org",
+  "@type": "Product",
+  "name": "Kế hoạch tài chính gia đình",
+  "url": "https://lehboi.github.io/huu-ich/ke-hoach-tai-chinh/",
+  "category": "Tài chính",
+  "description": "Công cụ lập kế hoạch tài chính cho tất cả các nhu cầu của gia đình trong tương lai, đem đến cuộc sống ổn định trọn đời",
+  "offers": {
+    "@type": "Offer",
+    "availability": "http://schema.org/InStock",
+    "price": "0",
+    "priceCurrency": "VND"
+  }
+}
+</script>
 </head>
-
 
 <body>
   <!-- top of body -->
@@ -223,7 +238,7 @@ data-ad-slot="5275186684">
   </div>
 
   <h1>Lập kế hoạch tài chính gia đình</h1>
-  <div class="right">(<a href="https://en.lhboi.name.vn/fa/pfr/">English</a>)</div>
+  <div class="right">(<a href="https://lehboi.github.io/en/fa/pfr/">English</a>)</div>
   <div class="right">Bản 2.1, Tháng Ba, 2020.</div>
   <h2>Tại sao cần lập kế hoạch tài chính?</h2>
   <div class="flright"><amp-img alt="Lộ trình tài chính" src="/images/KHTCp1.png" width="600" height="371" layout="responsive"></amp-img></a></div>
@@ -319,10 +334,10 @@ srcdoc="<img width='100' height='24' src='https://c.statcounter.com/12598906/0/9
   <a href="viber://add?number=84989760570"><amp-img src="/images/icons/Viber-128.png" layout="fixed" width="40" height="40" alt="Viber"></amp-img></a>
   <a href="http://zaloapp.com/qr/p/lzfbyqlwzn9u"><amp-img src="/images/icons/Zalo.webp" layout="fixed" width="40" height="40" alt="Zalo"></amp-img></a> 
   <a href="tel:+84989760570"><amp-img src="/images/icons/Cell-Phone-256.png" layout="fixed" width="40" height="40" alt="điện thoại"></amp-img></a>
-  <a href="mailto:LEHBOI@GMAIL.COM?subject=www.lhboi.name.vn"><amp-img src="/images/icons/address_blue-128.png" layout="fixed" width="40" height="40" alt="email"></amp-img></a> 
+  <a href="mailto:LEHBOI@GMAIL.COM?subject=lehboi.github.io"><amp-img src="/images/icons/address_blue-128.png" layout="fixed" width="40" height="40" alt="email"></amp-img></a> 
   <a href="https://www.google.com/maps/place/L%C3%AA+H%E1%BB%93ng+B%E1%BB%99i/@10.720385,106.7007479,15z/data=!4m5!3m4!1s0x0:0x5e907d2164963e6f!8m2!3d10.720385!4d106.7007479" target='_blank'><amp-img src="/images/icons/Home_256x256.png" layout="fixed" width="40" height="40" alt="nhà"></amp-img></a>
   <br>
-  Nếu bạn chép lại những trang-web này, hãy ghi nguồn-gốc <a href="https://lehboi.github.io">http://LeHBoi.github.io</a> để người-đọc có-thể tìm được nội-dung mới nhất.
+  Nếu bạn chép lại những trang-web này, hãy ghi nguồn-gốc <a href="https://lehboi.github.io">http://LeHBoi.github.io</a> để người-đọc có-thể tìm được nội-dung mới nhất. (Domain name trước đây của website này là LHBOI.NAME.VN.)
   </div>
 </div>
 <amp-analytics type="googleanalytics">
