--- a/kinh-nghiem/linh-tinh/anh.html
+++ b/kinh-nghiem/linh-tinh/anh.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>Ành</title>
-<meta name="description" content="Ghi chép linh tinh về ảnh và máy tính Linux" />
+<title>Ghi chép linh tinh về ảnh và máy tính Linux</title>
+<meta name="description" content="Ghi chép linh tinh về ảnh và máy tính Linux và máy in phun" />
 <meta name="keywords" content="hữu ích, tài chính, cá nhân">
 <link rel="canonical" href="https://lehboi.github.io/kinh-nghiem/linh-tinh/anh">
 <link rel="alternate" href="https://www.lhboi.name.vn/kinh-nghiem/linh-tinh/anh">
@@ -221,7 +221,7 @@ data-ad-slot="5275186684">
     <amp-social-share type="email" height="32"></amp-social-share>
   </div>
 
-  <h1>Ảnh</h1>
+  <h1>Ghi chép linh tinh về ảnh và máy tính Linux</h1>
 <h2>Chống ẩm cho máy ảnh</h2>
 <div class="flright"><amp-img src="/images/PICT11596b20.jpg" width="300" height="400" layout="responsive"></amp-img>
 </div>
@@ -327,10 +327,10 @@ srcdoc="<img width='100' height='24' src='https://c.statcounter.com/12598906/0/9
   <a href="viber://add?number=84989760570"><amp-img src="/images/icons/Viber-128.png" layout="fixed" width="40" height="40" alt="Viber"></amp-img></a>
   <a href="http://zaloapp.com/qr/p/lzfbyqlwzn9u"><amp-img src="/images/icons/Zalo.webp" layout="fixed" width="40" height="40" alt="Zalo"></amp-img></a> 
   <a href="tel:+84989760570"><amp-img src="/images/icons/Cell-Phone-256.png" layout="fixed" width="40" height="40" alt="điện thoại"></amp-img></a>
-  <a href="mailto:LEHBOI@GMAIL.COM?subject=www.lhboi.name.vn"><amp-img src="/images/icons/address_blue-128.png" layout="fixed" width="40" height="40" alt="email"></amp-img></a> 
+  <a href="mailto:LEHBOI@GMAIL.COM?subject=lehboi.github.io"><amp-img src="/images/icons/address_blue-128.png" layout="fixed" width="40" height="40" alt="email"></amp-img></a> 
   <a href="https://www.google.com/maps/place/L%C3%AA+H%E1%BB%93ng+B%E1%BB%99i/@10.720385,106.7007479,15z/data=!4m5!3m4!1s0x0:0x5e907d2164963e6f!8m2!3d10.720385!4d106.7007479" target='_blank'><amp-img src="/images/icons/Home_256x256.png" layout="fixed" width="40" height="40" alt="nhà"></amp-img></a>
   <br>
-  Nếu bạn chép lại những trang-web này, hãy ghi nguồn-gốc <a href="https://lehboi.github.io">http://LeHBoi.github.io</a> để người-đọc có-thể tìm được nội-dung mới nhất.
+  Nếu bạn chép lại những trang-web này, hãy ghi nguồn-gốc <a href="https://lehboi.github.io">http://LeHBoi.github.io</a> để người-đọc có-thể tìm được nội-dung mới nhất. (Domain name trước đây của website này là LHBOI.NAME.VN.)
   </div>
 </div>
 <amp-analytics type="googleanalytics">
