--- a/huu-ich/ke-hoach-tai-chinh/index.html
+++ b/huu-ich/ke-hoach-tai-chinh/index.html
@@ -124,16 +124,18 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 <script type="application/ld+json">
 {
   "@context": "http://schema.org",
-  "@type": "Product",
+  "@type": "SoftwareApplication",
   "name": "Kế hoạch tài chính gia đình",
+  "operatingSystem": "web based",
+  "applicationCategory": "FinanceApplication",
+  "softwareVersion": "2.1",
+  "softwareRequirements": "Google Sheets",
+
   "url": "https://lehboi.github.io/huu-ich/ke-hoach-tai-chinh/",
-  "category": "Tài chính",
   "description": "Công cụ lập kế hoạch tài chính cho tất cả các nhu cầu của gia đình trong tương lai, đem đến cuộc sống ổn định trọn đời",
   "offers": {
     "@type": "Offer",
-    "availability": "http://schema.org/InStock",
     "price": "0",
-    "priceCurrency": "VND"
   }
 }
 </script>
