add licese to structured data

--- a/huu-ich/dau-tu-co-phieu/so-tk-hay-dau-tu.html
+++ b/huu-ich/dau-tu-co-phieu/so-tk-hay-dau-tu.html
@@ -138,13 +138,14 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 {
   "@context": "http://schema.org",
   "@type": "Dataset",
-  "name": "Lợi nhuận quỹ mở",
-  "description":"Lợi nhuận khi đầu tư định kỳ vào quỹ mở 1/2/3/4/5/10 năm",
+  "name": "Lợi nhuận quỹ mở so với sổ tiết kiệm, vàng, USD",
+  "description":"Lợi nhuận khi đầu tư định kỳ vào quỹ mở 1/2/3/5/10 năm",
   "keywords": [ "quỹ mở", "đầu tư", "định kỳ" ],
   "creator": {
     "@type": "Person",
     "url": "https://lehboi.github.io"
   },
+  "license": "https://creativecommons.org/licenses/by-nc/4.0/"
   "variableMeasured": "lợi nhuận",
   "url": "https://lehboi.github.io/huu-ich/dau-tu-co-phieu/so-tk-hay-dau-tu"
 }
