change structured data

--- a/huu-ich/ke-hoach-tai-chinh/khtcp2.html
+++ b/huu-ich/ke-hoach-tai-chinh/khtcp2.html
@@ -139,6 +139,24 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 }
 </style>
 <script async custom-element="amp-accordion" src="https://cdn.ampproject.org/v0/amp-accordion-0.1.js"></script>
+<script type="application/ld+json">
+{
+  "@context": "http://schema.org",
+  "@type": "SoftwareApplication",
+  "name": "Kế hoạch tài chính gia đình",
+  "operatingSystem": "web based",
+  "applicationCategory": "FinanceApplication",
+  "softwareVersion": "2.1",
+  "softwareRequirements": "Google Sheets",
+
+  "url": "https://lehboi.github.io/huu-ich/ke-hoach-tai-chinh/",
+  "description": "Công cụ lập kế hoạch tài chính cho tất cả các nhu cầu của gia đình trong tương lai, đem đến cuộc sống ổn định trọn đời",
+  "offers": {
+    "@type": "Offer",
+    "price": "0",
+  }
+}
+</script>
 </head>
 
 <body>
