--- a/huu-ich/dau-tu-co-phieu/so-tk-hay-dau-tu.html
+++ b/huu-ich/dau-tu-co-phieu/so-tk-hay-dau-tu.html
@@ -145,7 +145,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
     "@type": "Person",
     "url": "https://lehboi.github.io"
   },
-  "license": "https://creativecommons.org/licenses/by-nc/4.0/"
+  "license": "https://creativecommons.org/licenses/by-nc-nd/4.0/"
   "variableMeasured": "lợi nhuận",
   "url": "https://lehboi.github.io/huu-ich/dau-tu-co-phieu/so-tk-hay-dau-tu"
 }
@@ -276,7 +276,7 @@ data-ad-slot="3830899615">
 
   <h2>Kết quả thực tế</h2>
   <p>Trong bài này, tôi sẽ so sánh kết quả giữa hai phương tiện trên bằng những tính toán trên những số liệu thực tế trong một thời gian dài hơn 12 năm.
-  <br>Thời điểm bắt đầu tính là đầu năm 2009. Từ ngày đó đến ngày 09/09/2021
+  <br>Thời điểm bắt đầu tính là đầu năm 2009. Từ ngày đó đến ngày 16/09/2021
  là hơn 12 năm.</p>
   <p>Giả sử anh A tích luỹ tiền bằng cách gửi tiết kiệm ở ngân hàng. Bắt đầu từ đầu năm 2009, mỗi 4 tuần (mỗi năm 13 lần ứng với 13 tháng lương) anh A gửi một triệu đồng vào một sổ tiết kiệm kỳ hạn 12 tháng ở Ngân hàng Ngoại thương Việt Nam, khi đáo hạn sổ đó thì nhập lãi vào gốc để gửi tiếp kỳ mới. Số tiền anh A đã gửi vào là 166
  triệu đồng. Vào ngày 09/09/2021
@@ -286,9 +286,9 @@ data-ad-slot="3830899615">
 </b>. Mặc dù trong 12 năm qua có những lúc lãi suất tiết kiệm lên đến 14%/năm, nhưng do anh A gửi góp theo thời gian nên những khoản tiền gửi trễ sinh ra ít tiền lãi hơn những khoản tiền gửi sớm. Lợi nhuận trung bình đó đang giảm dần vì lãi suất tiết kiệm đã thấp hơn số trung bình đó từ 7 năm nay. Số liệu tính toán <a href="https://docs.google.com/spreadsheets/d/1br9PAhnFj5H2_XtqKL-8MjcCWTU3JP4WGf7guHMdcGo/edit#gid=1998350075" target='_blank'>trong bảng tính này</a>.</p>
 
   <p>Giả sử anh B tích luỹ tiền bằng quĩ đầu tư VF1. Bắt đầu từ đầu năm 2009 mỗi 4 tuần anh B gửi một triệu đồng vào quỹ <b>VF1</b>. Số tiền anh B đã gửi vào cũng là 166
- triệu đồng như anh A. Vào ngày 09/09/2021
- giá trị tài khoản đầu tư của anh B là <b> 547,032
- triệu đồng</b>. Lợi nhuận trung bình của việc tích luỹ này là <span class="red"><b> 17,47%/năm
+ triệu đồng như anh A. Vào ngày 16/09/2021
+ giá trị tài khoản đầu tư của anh B là <b> 547,598
+ triệu đồng</b>. Lợi nhuận trung bình của việc tích luỹ này là <span class="red"><b> 17,44%/năm
  </b></span>.</p>
 
 
@@ -369,10 +369,10 @@ data-ad-slot="3830899615">
   <p>Các con số lãi suất ở trên là lãi kép nên thời gian càng dài thì kết quả càng lớn. Ví dụ với lãi suất như trên, gửi mỗi 4 tuần 1 triệu đồng sau 30 năm sẽ từ 390 triệu đồng:</p>
   <span class="red">
   <ul>
-    <li>được khoảng 1,244
+    <li>được khoảng 1,028
  tỉ đồng nếu gửi ngân hàng</li>
-    <li>được khoảng 13,679
- tỉ đồng nếu gửi quỹ đầu tư, <b>bằng 10,98
+    <li>được khoảng 13,585
+ tỉ đồng nếu gửi quỹ đầu tư, <b>bằng 13,20
  lần gửi ngân hàng</b></li>
   </ul>
   </span>
@@ -455,8 +455,9 @@ data-ad-slot="3830899615">
   <a href="tel:+84989760570"><amp-img src="/images/icons/Cell-Phone-256.png" layout="fixed" width="40" height="40" alt="điện thoại"></amp-img></a>
   <a href="mailto:LEHBOI@GMAIL.COM?subject=lehboi.github.io"><amp-img src="/images/icons/address_blue-128.png" layout="fixed" width="40" height="40" alt="email"></amp-img></a> 
   <a href="https://www.google.com/maps/place/L%C3%AA+H%E1%BB%93ng+B%E1%BB%99i/@10.720385,106.7007479,15z/data=!4m5!3m4!1s0x0:0x5e907d2164963e6f!8m2!3d10.720385!4d106.7007479" target='_blank'><amp-img src="/images/icons/Home_256x256.png" layout="fixed" width="40" height="40" alt="nhà"></amp-img></a>
-  <br>
-  Nếu bạn chép lại những trang-web này, hãy ghi nguồn-gốc <a href="https://lehboi.github.io">http://LeHBoi.github.io</a> để người-đọc có-thể tìm được nội-dung mới nhất. (Domain name trước đây của website này là LHBOI.NAME.VN.)
+  <br>Trang-web này được phát-hành dưới <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/" target='_blank'>Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License</a>.
+  Bạn được phép chép lại trang-web này, với điều-kiện không được thay-đổi nội-dung và không dùng cho mục-đích thu-lợi và ghi rõ nguồn-gốc <a href="https://lehboi.github.io">http://LeHBoi.github.io</a>.
+  <br>(Domain name trước đây của website này là LHBOI.NAME.VN.)
   </div>
 </div>
 <amp-analytics type="googleanalytics">
