--- a/huu-ich/ke-hoach-tai-chinh/index.html
+++ b/huu-ich/ke-hoach-tai-chinh/index.html
@@ -130,9 +130,10 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   "applicationCategory": "FinanceApplication",
   "softwareVersion": "2.1",
   "softwareRequirements": "Google Sheets",
-
   "url": "https://lehboi.github.io/huu-ich/ke-hoach-tai-chinh/",
   "description": "Công cụ lập kế hoạch tài chính cho tất cả các nhu cầu của gia đình trong tương lai, đem đến cuộc sống ổn định trọn đời",
+  "image": "https://lehboi.github.io/images/KHTCp1.png",
+  "screenshot": "https://lehboi.github.io/images/KHTCp1.png",
   "offers": {
     "@type": "Offer",
     "price": "0",
@@ -250,8 +251,9 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   <a href="tel:+84989760570"><amp-img src="/images/icons/Cell-Phone-256.png" layout="fixed" width="40" height="40" alt="điện thoại"></amp-img></a>
   <a href="mailto:LEHBOI@GMAIL.COM?subject=lehboi.github.io"><amp-img src="/images/icons/address_blue-128.png" layout="fixed" width="40" height="40" alt="email"></amp-img></a> 
   <a href="https://www.google.com/maps/place/L%C3%AA+H%E1%BB%93ng+B%E1%BB%99i/@10.720385,106.7007479,15z/data=!4m5!3m4!1s0x0:0x5e907d2164963e6f!8m2!3d10.720385!4d106.7007479" target='_blank'><amp-img src="/images/icons/Home_256x256.png" layout="fixed" width="40" height="40" alt="nhà"></amp-img></a>
-  <br>
-  Nếu bạn chép lại những trang-web này, hãy ghi nguồn-gốc <a href="https://lehboi.github.io">http://LeHBoi.github.io</a> để người-đọc có-thể tìm được nội-dung mới nhất. (Domain name trước đây của website này là LHBOI.NAME.VN.)
+  <br>Trang-web này được phát-hành dưới <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/" target='_blank'>Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License</a>.
+  Bạn được phép chép lại trang-web này, với điều-kiện không được thay-đổi nội-dung và không dùng cho mục-đích thu-lợi và ghi rõ nguồn-gốc <a href="https://lehboi.github.io">http://LeHBoi.github.io</a>.
+  <br>(Domain name trước đây của website này là LHBOI.NAME.VN.)
   </div>
 </div>
 <amp-analytics type="googleanalytics">
