--- a/huu-ich/tich-luy.html
+++ b/huu-ich/tich-luy.html
@@ -690,19 +690,19 @@ data-ad-slot="3830899615">
 </amp-ad>
 
 
-  <h3>Những sai lầm khi tích luỹ</h3>
-  <h4>1. Tưởng lầm rằng sở hữu tài sản đắt tiền cũng là tích luỹ cho tương lai</h4>
+  <h2>Những sai lầm khi tích luỹ</h2>
+  <h3>1. Tưởng lầm rằng sở hữu tài sản đắt tiền cũng là tích luỹ cho tương lai</h3>
   <p>Nhiều người nghĩ rằng dùng những thứ đắt tiền như smartphone, camera, TV LED 3D, xe hơi… đến khi cần tiền đem bán được, vậy cũng là tích luỹ cho tương lai. Họ quên rằng tích luỹ là phải làm cho đồng tiền tiết kiệm sinh lợi nhanh hơn mức trượt giá.</p>
-  <h4>2. Cận thị</h4>
+  <h3>2. Cận thị</h3>
   <p>Người bị cận thị chỉ nhìn rõ được trong khoảng cách gần, những thứ ở xa chỉ thấy mờ, thậm chí không thấy. Tích luỹ tiền theo kiểu cận thị thì chỉ thấy những cách sinh lợi ngắn hạn như gửi ngân hàng, hụi, không nghĩ đến những công cụ <a href="tich-luy-dai-han">đầu tư dài hạn</a>.</p>
-  <h4>3. Thiếu kiên nhẫn</h4>
+  <h3>3. Thiếu kiên nhẫn</h3>
   <p>Mỗi tháng dư được 2 triệu đồng, để suốt năm chưa được 30 triệu đồng, <i>vài trăm năm</i> nữa mới có được 20 tỉ. Thôi, không tiết kiệm nữa!
   <br>Không cần vài trăm năm đâu! <a href="ke-hoach-tai-chinh/">Bảng tính kế hoạch tài chính</a> cho thấy bạn sẽ có số tiền đó trước khi về hưu. Nếu bạn nghi ngờ kết quả tính toán thì hãy nhờ các thầy dạy Toán tính lại.</p>
-  <h4>4. Thiếu kiểm soát</h4>
+  <h3>4. Thiếu kiểm soát</h3>
   <p>Bạn có tiết kiệm nhưng quên so sánh kết quả tích luỹ với kế hoạch đã đặt ra.
   <br>Hãy thường xuyên dùng <a href="/kinh-nghiem/may-tinh/gnucash">phần mềm quản lý tài sản, thu chi</a> và cập nhật tình trạng tài sản của gia đình vào <a href="ke-hoach-tai-chinh/">bảng kế hoạch tài chính</a> để biết các kế hoạch có theo kịp tiến độ không.
   <br>Bạn sẽ cần đến phần mềm quản lý tài sản khi bạn có hơn chục tài khoản tiết kiệm có kỳ hạn, vài tài khoản đầu tư, vài bất động sản.</p>
-  <h4>5. Ăn mừng quá sớm</h4>
+  <h3>5. Ăn mừng quá sớm</h3>
   <p>Bạn bắt đầu ăn mừng và lơi lỏng việc tiết kiệm khi tài sản tích luỹ được hơn vài chục tháng thu nhập.
   <br>Bạn cần xem lại kế hoạch tài chính trước khi cho phép mình giảm mức độ tiết kiệm.</p>
 
@@ -868,23 +868,11 @@ data-ad-slot="3830899615">
   <a href="tel:+84989760570"><amp-img src="/images/icons/Cell-Phone-256.png" layout="fixed" width="40" height="40" alt="điện thoại"></amp-img></a>
   <a href="mailto:LEHBOI@GMAIL.COM?subject=lehboi.github.io"><amp-img src="/images/icons/address_blue-128.png" layout="fixed" width="40" height="40" alt="email"></amp-img></a> 
   <a href="https://www.google.com/maps/place/L%C3%AA+H%E1%BB%93ng+B%E1%BB%99i/@10.720385,106.7007479,15z/data=!4m5!3m4!1s0x0:0x5e907d2164963e6f!8m2!3d10.720385!4d106.7007479" target='_blank'><amp-img src="/images/icons/Home_256x256.png" layout="fixed" width="40" height="40" alt="nhà"></amp-img></a>
-  <br>
-  Nếu bạn chép lại những trang-web này, hãy ghi nguồn-gốc <a href="https://lehboi.github.io">http://LeHBoi.github.io</a> để người-đọc có-thể tìm được nội-dung mới nhất. (Domain name trước đây của website này là LHBOI.NAME.VN.)
+  <br>Trang-web này được phát-hành dưới <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/" target='_blank'>Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License</a>.
+  Bạn được phép chép lại trang-web này, với điều-kiện không được thay-đổi nội-dung và không dùng cho mục-đích thu-lợi và ghi rõ nguồn-gốc <a href="https://lehboi.github.io">http://LeHBoi.github.io</a>.
+  <br>(Domain name trước đây của website này là LHBOI.NAME.VN.)
   </div>
 </div>
-<amp-analytics type="googleanalytics">
-  <script type="application/json">
-  {
-  "vars": { "account": "UA-25268996-1" },
-  "triggers": {
-  "trackPageview": {
-  "on": "visible",
-  "request": "pageview"
-    }
-   }
-  }
-  </script>
-</amp-analytics>
 <amp-analytics>
   <script type="application/json">
     {
@@ -898,6 +886,19 @@ data-ad-slot="3830899615">
         }
       }
     }
+  </script>
+</amp-analytics>
+<amp-analytics type="googleanalytics">
+  <script type="application/json">
+  {
+  "vars": { "account": "UA-25268996-1" },
+  "triggers": {
+  "trackPageview": {
+  "on": "visible",
+  "request": "pageview"
+    }
+   }
+  }
   </script>
 </amp-analytics>
 
