--- a/huu-ich/ke-hoach-tai-chinh/index.html
+++ b/huu-ich/ke-hoach-tai-chinh/index.html
@@ -137,7 +137,12 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   "offers": {
     "@type": "Offer",
     "price": "0",
-  }
+  },
+  "author": {
+    "@type": "Person",
+    "name": "Lê Hồng Bội",
+    "url": "http://lehboi.github.io/home/about"
+  }  
 }
 </script>
 </head>
@@ -256,19 +261,6 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   <br>(Domain name trước đây của website này là LHBOI.NAME.VN.)
   </div>
 </div>
-<amp-analytics type="googleanalytics">
-  <script type="application/json">
-  {
-  "vars": { "account": "UA-25268996-1" },
-  "triggers": {
-  "trackPageview": {
-  "on": "visible",
-  "request": "pageview"
-    }
-   }
-  }
-  </script>
-</amp-analytics>
 <amp-analytics>
   <script type="application/json">
     {
@@ -282,6 +274,19 @@ div.footer { font-size: 80%; color: red; text-align: center; }
         }
       }
     }
+  </script>
+</amp-analytics>
+<amp-analytics type="googleanalytics">
+  <script type="application/json">
+  {
+  "vars": { "account": "UA-25268996-1" },
+  "triggers": {
+  "trackPageview": {
+  "on": "visible",
+  "request": "pageview"
+    }
+   }
+  }
   </script>
 </amp-analytics>
 
