--- a/huu-ich/ke-hoach-tai-chinh/khtcp1.html
+++ b/huu-ich/ke-hoach-tai-chinh/khtcp1.html
@@ -155,6 +155,11 @@ div.footer { font-size: 80%; color: red; text-align: center; }
   "offers": {
     "@type": "Offer",
     "price": "0",
+  },
+  "author": {
+    "@type": "Person",
+    "name": "Lê Hồng Bội",
+    "url": "http://lehboi.github.io/home/about"
   }
 }
 </script>
@@ -707,19 +712,6 @@ data-ad-slot="3830899615">
   <br>(Domain name trước đây của website này là LHBOI.NAME.VN.)
   </div>
 </div>
-<amp-analytics type="googleanalytics">
-  <script type="application/json">
-  {
-  "vars": { "account": "UA-25268996-1" },
-  "triggers": {
-  "trackPageview": {
-  "on": "visible",
-  "request": "pageview"
-    }
-   }
-  }
-  </script>
-</amp-analytics>
 <amp-analytics>
   <script type="application/json">
     {
@@ -733,6 +725,19 @@ data-ad-slot="3830899615">
         }
       }
     }
+  </script>
+</amp-analytics>
+<amp-analytics type="googleanalytics">
+  <script type="application/json">
+  {
+  "vars": { "account": "UA-25268996-1" },
+  "triggers": {
+  "trackPageview": {
+  "on": "visible",
+  "request": "pageview"
+    }
+   }
+  }
   </script>
 </amp-analytics>
 
