edit structured data

--- a/sitemap.html
+++ b/sitemap.html
@@ -201,7 +201,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
       <a href='/kinh-nghiem/may-tinh/cloudstorage'>Kinh-nghiệm dùng cloud storage</a><br>
       <a href='/kinh-nghiem/may-tinh/privcloudstor'>Hướng-dẫn làm cloud storage server</a><br>
       <a href='/kinh-nghiem/may-tinh/pi-network'>Tiền-điện-tử Pi</a><br>
-      <a href='/kinh-nghiem/may-tinh/cryptocurrency'>Hỏi đáp về Cryptocurrency<</a><br>
+      <a href='/kinh-nghiem/may-tinh/cryptocurrency'>Hỏi đáp về Cryptocurrency</a><br>
       <a href="/kinh-nghiem/may-tinh/vi-dien-tu">Nhận-xét các ví-điện-tử</a><br>
       <a href='/kinh-nghiem/may-tinh/gnucash'>Dùng GnuCash để quản lý tài sản gia đình</a><br>
       <a href='/kinh-nghiem/may-tinh/ham-tai-chinh'>Các phép-tính-tài-chính cần biết</a><br>
