--- a/huu-ich/dau-tu-co-phieu/so-tk-hay-dau-tu.html
+++ b/huu-ich/dau-tu-co-phieu/so-tk-hay-dau-tu.html
@@ -439,6 +439,8 @@ data-ad-slot="3830899615">
  và  lợi nhuận trung bình của việc tích luỹ này là 5,76%/năm
 , thấp hơn gửi tiết kiệm VND và thấp hơn tích luỹ bằng quỹ đầu tư. Lợi nhuận trung bình này có lẽ cũng tương đương mức trượt giá trung bình trong cùng thời gian, điều đó cho thấy tích luỹ bằng vàng không có lời.
   <br>Các số liệu về tỷ giá USD-VND và giá vàng từ đầu năm 2009 đến nay được lấy từ website Vietcombank.com.vn và www.gold.org.</p>
+  <p>Bảng dưới đây so sánh lợi nhuận trung bình của việc đầu tư đều đặn vào các kênh từ năm 2009.</p>
+  <div><amp-img alt="So sánh kết quả đầu tư đều đặn" src="/data/XIRRs.png" height="162" width="523" layout="responsive"></amp-img></a></div>
   <p>Trang web này được cập nhật hàng tuần. Mời các bạn đến xem kết quả đầu tư mỗi tuần.</p>
 
   <div class="todiscuss">
@@ -463,7 +465,7 @@ data-ad-slot="3830899615">
   <a href="mailto:LEHBOI@GMAIL.COM?subject=lehboi.github.io"><amp-img src="/images/icons/address_blue-128.png" layout="fixed" width="40" height="40" alt="email"></amp-img></a> 
   <a href="https://www.google.com/maps/place/L%C3%AA+H%E1%BB%93ng+B%E1%BB%99i/@10.720385,106.7007479,15z/data=!4m5!3m4!1s0x0:0x5e907d2164963e6f!8m2!3d10.720385!4d106.7007479" target='_blank'><amp-img src="/images/icons/Home_256x256.png" layout="fixed" width="40" height="40" alt="nhà"></amp-img></a>
   </div>
-  <div class="even">Trang-web này được phát-hành dưới <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/" target='_blank'>Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License</a>.
+  <div class="even">Trang-web này được xuất-bản dưới <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/" target='_blank'>Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License</a>.
   Bạn được phép chép lại trang-web này, với điều-kiện không được thay-đổi nội-dung và không dùng cho mục-đích thu-lợi và ghi rõ nguồn-gốc <a href="https://lehboi.github.io">http://LeHBoi.github.io</a>.
   <br>(Domain name trước đây của website này là LHBOI.NAME.VN.)
   </div>
