add comparison image

--- a/huu-ich/tich-luy-dai-han.html
+++ b/huu-ich/tich-luy-dai-han.html
@@ -412,6 +412,7 @@ data-ad-slot="3830899615">
   <h3>Ngoại tệ</h3>
   <p>Cũng có người tin tưởng vào sức mạnh của đô-la Mỹ nên quyết định tích luỹ dài hạn bằng đô-la Mỹ. Nếu giữ đô-la Mỹ trong tủ thì còn dở hơn giữ vàng vì đô-la Mỹ thật sự có mất giá theo thời gian. Nếu gửi tiết kiệm bằng đô-la Mỹ thì dở hơn gửi tiết kiệm bằng tiền Việt Nam vì ngân hàng nhà nước có chính sách bảo vệ tiền Việt Nam. Tóm lại đô-la Mỹ cũng giống như vàng, chỉ thích hợp để đầu cơ chứ không thích hợp để giữ lâu dài. Ngay cả dân Mỹ cũng không gửi nhiều tiền trong các tài khoản tiết kiệm thì dân Việt Nam càng không nên (theo <a href="http://www.statisticbrain.com/american-family-financial-statistics/" target='_blank'>American Family Financial Statistics</a> trung bình số dư tài khoản tiết kiệm của dân Mỹ chỉ vào khoảng một tháng lương).</p>
   <p>Tôi đã dùng số liệu lịch sử tỷ giá USD-VND và giá vàng tính theo USD để tính hiệu quả của việc để dành tiền bằng USD hoặc vàng từ đầu năm 2009 đến nay. Kết quả đúng theo suy luận ở trên: giữ USD và vàng dài hạn không lợi bằng gửi tiết kiệm kỳ hạn một năm. Kết quả được trình bày trong bài <a href="dau-tu-co-phieu/so-tk-hay-dau-tu#goldusd">Sổ tiết kiệm hay quỹ đầu tư</a>.</p>
+  <div><amp-img alt="So sánh kết quả đầu tư đều đặn" src="/data/XIRRs.png" height="162" width="523" layout="responsive"></amp-img></a></div>
 
 <!-- AMP In-article 1 -->
 <amp-ad
@@ -545,24 +546,12 @@ data-ad-slot="3830899615">
   <a href="tel:+84989760570"><amp-img src="/images/icons/Cell-Phone-256.png" layout="fixed" width="40" height="40" alt="điện thoại"></amp-img></a>
   <a href="mailto:LEHBOI@GMAIL.COM?subject=lehboi.github.io"><amp-img src="/images/icons/address_blue-128.png" layout="fixed" width="40" height="40" alt="email"></amp-img></a> 
   <a href="https://www.google.com/maps/place/L%C3%AA+H%E1%BB%93ng+B%E1%BB%99i/@10.720385,106.7007479,15z/data=!4m5!3m4!1s0x0:0x5e907d2164963e6f!8m2!3d10.720385!4d106.7007479" target='_blank'><amp-img src="/images/icons/Home_256x256.png" layout="fixed" width="40" height="40" alt="nhà"></amp-img></a>
-  <br>Trang-web này được phát-hành dưới <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/" target='_blank'>Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License</a>.
+  </div>
+  <div class="even">Trang-web này được xuất-bản dưới <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/" target='_blank'>Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License</a>.
   Bạn được phép chép lại trang-web này, với điều-kiện không được thay-đổi nội-dung và không dùng cho mục-đích thu-lợi và ghi rõ nguồn-gốc <a href="https://lehboi.github.io">http://LeHBoi.github.io</a>.
   <br>(Domain name trước đây của website này là LHBOI.NAME.VN.)
   </div>
 </div>
-<amp-analytics type="googleanalytics">
-  <script type="application/json">
-  {
-  "vars": { "account": "UA-25268996-1" },
-  "triggers": {
-  "trackPageview": {
-  "on": "visible",
-  "request": "pageview"
-    }
-   }
-  }
-  </script>
-</amp-analytics>
 <amp-analytics>
   <script type="application/json">
     {
@@ -576,6 +565,19 @@ data-ad-slot="3830899615">
         }
       }
     }
+  </script>
+</amp-analytics>
+<amp-analytics type="googleanalytics">
+  <script type="application/json">
+  {
+  "vars": { "account": "UA-25268996-1" },
+  "triggers": {
+  "trackPageview": {
+  "on": "visible",
+  "request": "pageview"
+    }
+   }
+  }
   </script>
 </amp-analytics>
 
