--- a/huu-ich/tich-luy-dai-han.html
+++ b/huu-ich/tich-luy-dai-han.html
@@ -137,7 +137,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
-  "@type": "Article",
+  "@type": "BlogPosting",
   "mainEntityOfPage": {
     "@type": "WebPage",
     "@id": "https://lehboi.github.io/huu-ich/tich-luy-dai-han"
