--- a/kinh-nghiem/may-tinh/privcloudstor.html
+++ b/kinh-nghiem/may-tinh/privcloudstor.html
@@ -142,7 +142,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
-  "@type": "TechArticle",
+  "@type": "HowTo",
   "mainEntityOfPage": {
     "@type": "WebPage",
     "@id": "https://lehboi.github.io/kinh-nghiem/may-tinh/privcloudstor"
@@ -154,7 +154,22 @@ div.footer { font-size: 80%; color: red; text-align: center; }
     "@type": "Person",
     "name": "Lê Hồng Bội",
     "url": "http://lehboi.github.io/home/about"
-  }
+  },
+  "supply": {
+    "@type": "HowToSupply",
+    "name": "Laptop",
+    "description": "Old laptop 512MB RAM min, 240GB HDD min"
+  },
+  "tool": [
+    {
+      "@type": "HowToTool",
+      "name": "USB flash drive 2GB"
+    },
+    {
+      "@type": "HowToTool",
+      "name": "Internet access"
+    }
+  ]
 }
 </script>
 </head>
@@ -633,7 +648,8 @@ Nếu không tìm được một máy laptop cũ để làm cloud storage server
   <a href="tel:+84989760570"><amp-img src="/images/icons/Cell-Phone-256.png" layout="fixed" width="40" height="40" alt="điện thoại"></amp-img></a>
   <a href="mailto:LEHBOI@GMAIL.COM?subject=lehboi.github.io"><amp-img src="/images/icons/address_blue-128.png" layout="fixed" width="40" height="40" alt="email"></amp-img></a> 
   <a href="https://www.google.com/maps/place/L%C3%AA+H%E1%BB%93ng+B%E1%BB%99i/@10.720385,106.7007479,15z/data=!4m5!3m4!1s0x0:0x5e907d2164963e6f!8m2!3d10.720385!4d106.7007479" target='_blank'><amp-img src="/images/icons/Home_256x256.png" layout="fixed" width="40" height="40" alt="nhà"></amp-img></a>
-  <br>Trang-web này được phát-hành dưới <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/" target='_blank'>Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License</a>.
+  </div>
+  <div class="even">Trang-web này được áp-dụng <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/" target='_blank'>Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License</a>.
   Bạn được phép chép lại trang-web này, với điều-kiện không được thay-đổi nội-dung và không dùng cho mục-đích thu-lợi và ghi rõ nguồn-gốc <a href="https://lehboi.github.io">http://LeHBoi.github.io</a>.
   <br>(Domain name trước đây của website này là LHBOI.NAME.VN.)
   </div>
