correct structured data

--- a/huu-ich/tich-luy-dai-han.html
+++ b/huu-ich/tich-luy-dai-han.html
@@ -149,6 +149,11 @@ div.footer { font-size: 80%; color: red; text-align: center; }
     "@type": "Person",
     "name": "Lê Hồng Bội",
     "url": "http://lehboi.github.io/home/about"
+  },
+  "publisher": {
+    "@type": "Person",
+    "name": "Lê Hồng Bội",
+    "url": "http://lehboi.github.io/home/about"
   }
 }
 </script>
