--- a/en/fa/pfr/pfr1.html
+++ b/en/fa/pfr/pfr1.html
@@ -281,7 +281,34 @@ Then, you rename your new file to PFRyyyymm after the starting month of this pla
 </section>
 </amp-accordion>
 
-[an error occurred while processing this directive]
+
+<!-- AMP In-article 1 -->
+<amp-ad
+media="(max-width: 399px)"
+height=280
+layout="fixed-height"
+type="adsense"
+data-ad-client="ca-pub-2242556057278004"
+data-ad-slot="3830899615">
+</amp-ad>
+<amp-ad
+media="(min-width: 400px) and (max-width: 499px)"
+height=250
+layout="fixed-height"
+type="adsense"
+data-ad-client="ca-pub-2242556057278004"
+data-ad-slot="3830899615">
+</amp-ad>
+<amp-ad
+media="(min-width: 500px)"
+height=100
+layout="fixed-height"
+type="adsense"
+data-ad-client="ca-pub-2242556057278004"
+data-ad-slot="3830899615">
+</amp-ad>
+
+
 <h3>The basic data</h3>
 <p>Please fill in your name, your year of birth, and the year to start the plan (normally it is the current year or next year) in B3, B4, B5 of the sheet Common.
 <br>Write the total balance of your portfolio (estates, stocks, mutual funds, 401(k), IRA, etc.) to B6. Your portfolio are to be topped up monthly until your retirement. The value of the house which you are living in is not counted in until you sell it.
@@ -304,7 +331,34 @@ Increasing the saving amount over time is the trick that helps you start buildin
 <br>B16 is the volume of your needed retirement fund. It is calculated from the above information.
 </p>
 
-[an error occurred while processing this directive]
+
+<!-- AMP In-article 1 -->
+<amp-ad
+media="(max-width: 399px)"
+height=280
+layout="fixed-height"
+type="adsense"
+data-ad-client="ca-pub-2242556057278004"
+data-ad-slot="3830899615">
+</amp-ad>
+<amp-ad
+media="(min-width: 400px) and (max-width: 499px)"
+height=250
+layout="fixed-height"
+type="adsense"
+data-ad-client="ca-pub-2242556057278004"
+data-ad-slot="3830899615">
+</amp-ad>
+<amp-ad
+media="(min-width: 500px)"
+height=100
+layout="fixed-height"
+type="adsense"
+data-ad-client="ca-pub-2242556057278004"
+data-ad-slot="3830899615">
+</amp-ad>
+
+
 <h3>List of installments</h3>
 <p>Fill the sheet Installments with your current and planned installments. For example a car, a house, college debt, etc.
 <br>What makes this tool different is that we count the monthly children expenses as installments from birthday to college graduation. You fill in as many lines as your (planned) number of children.
@@ -336,7 +390,34 @@ Increasing the saving amount over time is the trick that helps you start buildin
 </li>
 </ul>
 
-[an error occurred while processing this directive]
+
+<!-- AMP In-article 1 -->
+<amp-ad
+media="(max-width: 399px)"
+height=280
+layout="fixed-height"
+type="adsense"
+data-ad-client="ca-pub-2242556057278004"
+data-ad-slot="3830899615">
+</amp-ad>
+<amp-ad
+media="(min-width: 400px) and (max-width: 499px)"
+height=250
+layout="fixed-height"
+type="adsense"
+data-ad-client="ca-pub-2242556057278004"
+data-ad-slot="3830899615">
+</amp-ad>
+<amp-ad
+media="(min-width: 500px)"
+height=100
+layout="fixed-height"
+type="adsense"
+data-ad-client="ca-pub-2242556057278004"
+data-ad-slot="3830899615">
+</amp-ad>
+
+
 <h3>View and adjust your roadmap</h3>
 <h4>Calculating</h4>
 <p>After filling in all necessary information, please move to the sheet Roadmap and choose the value <b>frm1</b> in the cell <b>F1</b>, this tool will start calculating and showing the roadmap.
