--- a/en/fa/pfr/pfr2.html
+++ b/en/fa/pfr/pfr2.html
@@ -248,7 +248,34 @@ Then, you rename your new file to PFRyyyymm after the starting month of this pla
 <p>Please read the Instruction sheet thoroughly before starting the following steps.</p>
 </div>
 
-[an error occurred while processing this directive]
+
+<!-- AMP In-article 1 -->
+<amp-ad
+media="(max-width: 399px)"
+height=280
+layout="fixed-height"
+type="adsense"
+data-ad-client="ca-pub-2242556057278004"
+data-ad-slot="3830899615">
+</amp-ad>
+<amp-ad
+media="(min-width: 400px) and (max-width: 499px)"
+height=250
+layout="fixed-height"
+type="adsense"
+data-ad-client="ca-pub-2242556057278004"
+data-ad-slot="3830899615">
+</amp-ad>
+<amp-ad
+media="(min-width: 500px)"
+height=100
+layout="fixed-height"
+type="adsense"
+data-ad-client="ca-pub-2242556057278004"
+data-ad-slot="3830899615">
+</amp-ad>
+
+
 <h3>The basic data</h3>
 <p>Please fill your name, year of birth, and the year to start the plan (normally it is the current year or next year) in B2, B3, B4 of the sheet Common.
 <br>Write the total value of your portfolio (estates, stocks, mutual funds, 401(k), IRA, etc.) to B6. The value of the house which you are living in is not counted in until you sell it.
@@ -276,7 +303,34 @@ Then, you rename your new file to PFRyyyymm after the starting month of this pla
 </p>
 
 
-[an error occurred while processing this directive]
+
+<!-- AMP In-article 1 -->
+<amp-ad
+media="(max-width: 399px)"
+height=280
+layout="fixed-height"
+type="adsense"
+data-ad-client="ca-pub-2242556057278004"
+data-ad-slot="3830899615">
+</amp-ad>
+<amp-ad
+media="(min-width: 400px) and (max-width: 499px)"
+height=250
+layout="fixed-height"
+type="adsense"
+data-ad-client="ca-pub-2242556057278004"
+data-ad-slot="3830899615">
+</amp-ad>
+<amp-ad
+media="(min-width: 500px)"
+height=100
+layout="fixed-height"
+type="adsense"
+data-ad-client="ca-pub-2242556057278004"
+data-ad-slot="3830899615">
+</amp-ad>
+
+
 <h3>Plan-Do-Check-Act</h3>
 <p>The calculation in this tool depends on variable inputs such as inflation rate, return on investment, income and expenses. You should renew your roadmap whenever any of those inputs changes or at least once per year. You should make a copy of the latest file and work on the new file.</p>
 
